--- a/src/main/java/com/miage/gi/PanelHome.form
+++ b/src/main/java/com/miage/gi/PanelHome.form
@@ -52,6 +52,7 @@
             <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;JOUER !&lt;/b&gt;"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="newPlayRedLabelMouseClicked"/>
             <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="newPlayRedLabelMouseExited"/>
           </Events>
           <Constraints>
@@ -335,9 +336,6 @@
               </StringArray>
             </Property>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="colorPlayer1ComboBoxActionPerformed"/>
-          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="330" y="210" width="-1" height="-1"/>
