--- a/src/main/java/com/miage/gui/FrameMain_MapPanel.form
+++ b/src/main/java/com/miage/gui/FrameMain_MapPanel.form
@@ -23,12 +23,18 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="PanelContainer" min="-2" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Component id="PanelContainer" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="350" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="PanelContainer" min="-2" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Component id="PanelContainer" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="251" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
