--- a/src/main/java/com/miage/gui/MapPanel.form
+++ b/src/main/java/com/miage/gui/MapPanel.form
@@ -137,7 +137,9 @@
                 </Constraint>
               </Constraints>
 
-              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+                <Property name="useNullLayout" type="boolean" value="true"/>
+              </Layout>
             </Container>
           </SubComponents>
         </Container>
